NF-46 initial controllers and setup

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -2,11 +2,7 @@
 
   <script type="text/javascript">
   window.env = {
-      USER_NAME: "{{{USER_NAME}}}",
-      IS_ADMIN: "{{{USER_IS_ADMIN}}}",
-      VERSION: "{{{VERSION}}}",
-      RELEASE_NOTES_URL: "{{{RELEASE_NOTES_URL}}}",
-      TRAINING_URL: "{{{TRAINING_URL}}}"
+      VERSION: "{{{VERSION}}}"
   };
   </script>
 
