[NF-53] Finish default state of Policies page; refactor redundant elements to use mapped data instead

--- a/src/main/js/src/policies/Policies.css
+++ b/src/main/js/src/policies/Policies.css
@@ -135,3 +135,12 @@
     padding: 0px;
     gap: 16px;
 }
+
+.policy-asset-subtype-rules {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 0px;
+    width: 100%;
+}
