--- a/src/main/js/src/App.css
+++ b/src/main/js/src/App.css
@@ -439,7 +439,7 @@ h2 {
     padding: 0;
 }
 
-label {
+label, th {
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
@@ -477,6 +477,30 @@ select {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+}
+
+.table {
+    border-collapse: separate;
+    border-spacing: 16px 0;
+    width: auto;
+}
+
+.table th{
+    border-top: none;
+    border-bottom: 1px solid #C5CACC !important;
+    padding: 0 0 6px 0;
+}
+
+.table td {
+    border-top: none;
+    padding: 6px 0 0 0;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 16px;
+    color: #3F4D55;
+}
+
+.primary-button {
     padding: 10px 12px;
     gap: 10px;
     background: #2078A8;
@@ -488,17 +512,4 @@ select {
     letter-spacing: 0.03em;
     color: #FFFFFF;
     cursor: pointer;
-}
-
-.table-headers, .table-rows {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 0px;
-    gap: 16px;
-}
-
-.table-label {
-    border-bottom: 1px solid #C5CACC;
-    padding-bottom: 4px;
 }
