--- a/src/main/js/src/lib/ActionsButton.css
+++ b/src/main/js/src/lib/ActionsButton.css
@@ -1,9 +1,14 @@
+.actions-container {
+    padding: 0px;
+    gap: 10px;
+    margin: 0;
+}
+
 .actions-button {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
     margin-bottom: 1px;
     -webkit-transition: all 300ms ease-out;
     -moz-transition: all 300ms ease-out;
@@ -47,6 +52,7 @@
 }
 
 .actions-button-menu {
+    position: absolute;
     visibility: hidden;
     opacity: 0;
     display: flex;
@@ -98,7 +104,6 @@
     font-size: 14px;
     color: #FFFFFF !important;
     font-weight: 300;
-    width: 100%;
 }
 
 .actions-menu-item:hover, .actions-menu-item.menu-open:hover {
