--- a/src/main/js/src/projects/Projects.css
+++ b/src/main/js/src/projects/Projects.css
@@ -26,7 +26,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
-    padding: 32px;
+    padding: 32px 32px 16px 32px;
     gap: 32px;
     background: rgba(255, 255, 255, 0.5);
 }
